Google authentication and user registration, JWT auth token
