# controllers/user.controller.js
@@ -1,9 +1,8 @@
-const create = require('../interfaces/command/create');
+const create = require('../interfaces/db/command/create');
 const sha256 = require('sha256');
 
 const postItem = ((req, res) => {
     req.body.id = sha256(req.body.email);
-    req.body.password = sha256(req.body.password);
 
     create.createOne(req,res.model)
     .then((result)=>{
